--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
+    <title>Calculate me! - A Calculator made by me</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <div class="container flex flex-col items-center bg-red mx-auto m-w-20">
-        <div id="display" class="display-container"></div>
 
+   <h1 class="text-center" >Welcome to calculate me!</h1>
+    <div class="container flex flex-col items-center mx-auto m-w-20">
+ <div class="row">
+   <input class="input" type="text"/>
+ </div>
+ <div class="row">
+   <button class="button">C</button>
+   <button class="button">%</button>
+   <button class="button">DEL</button>
+   <button class="button">M-</button>
+</div>
 <div class="row">
    <button class="button">7</button>
    <button class="button">8</button>
@@ -36,6 +46,8 @@
  </div>
 </div>
 </div>
+
+<script src="script.js"></script>
 
 </body>
 </html>
